fix menu issue + overflow -x issue

--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -29,6 +29,7 @@ li {
 
 .menu {
   display: flex;
+  z-index: 2;
   gap: 1em;
   font-size: 18px;
 }
